add support for operation parameters for POST/PUT/PATCH
