# yang-openapi.js
@@ -1,6 +1,6 @@
 // Generated by CoffeeScript 1.11.1
 (function() {
-  var Yang, clone, debug, definitions, discoverOperations, discoverParameters, discoverPaths, serializeJSchema, traverse, yaml, yang2jschema, yang2jsobj, yang2jstype;
+  var Yang, clone, debug, definitions, discoverOperations, discoverPathParameters, discoverPaths, serializeJSchema, traverse, yaml, yang2jschema, yang2jsobj, yang2jstype;
 
   if (process.env.DEBUG != null) {
     debug = require('debug')('yang:openapi');
@@ -183,7 +183,7 @@
   };
 
   discoverOperations = function(schema, item) {
-    var deprecated, ref1, ref2, ref3, ref4;
+    var deprecated, ref1, ref10, ref11, ref2, ref3, ref4, ref5, ref6, ref7, ref8, ref9;
     if (item == null) {
       item = false;
     }
@@ -199,6 +199,14 @@
             description: (ref2 = schema.description) != null ? ref2.tag : void 0,
             summary: "Invokes " + schema.tag + " in " + schema.parent.tag + ".",
             deprecated: deprecated,
+            parameter: [
+              {
+                name: schema.tag + ":input",
+                "in": 'body',
+                description: (ref3 = schema.input) != null ? (ref4 = ref3.description) != null ? ref4.tag : void 0 : void 0,
+                schema: yang2jschema(schema.input)
+              }
+            ],
             response: [
               {
                 code: 200,
@@ -212,9 +220,17 @@
         return [
           {
             method: 'post',
-            description: (ref3 = schema.description) != null ? ref3.tag : void 0,
+            description: (ref5 = schema.description) != null ? ref5.tag : void 0,
             summary: "Creates one or more new " + schema.tag + " in " + schema.parent.tag + ".",
             deprecated: deprecated,
+            parameter: [
+              {
+                name: "" + schema.tag,
+                "in": 'body',
+                description: (ref6 = schema.description) != null ? ref6.tag : void 0,
+                schema: yang2jschema(schema)
+              }
+            ],
             response: [
               {
                 code: 200,
@@ -237,6 +253,14 @@
             method: 'put',
             summary: "Replace the entire " + schema.tag + " collection",
             deprecated: deprecated,
+            parameter: [
+              {
+                name: "" + schema.tag,
+                "in": 'body',
+                description: (ref7 = schema.description) != null ? ref7.tag : void 0,
+                schema: yang2jschema(schema)
+              }
+            ],
             response: [
               {
                 code: 201,
@@ -247,6 +271,14 @@
             method: 'patch',
             summary: "Merge items into the " + schema.tag + " collection",
             deprecated: deprecated,
+            parameter: [
+              {
+                name: "" + schema.tag,
+                "in": 'body',
+                description: (ref8 = schema.description) != null ? ref8.tag : void 0,
+                schema: yang2jschema(schema)
+              }
+            ],
             response: [
               {
                 code: 201,
@@ -259,7 +291,7 @@
         return [
           {
             method: 'get',
-            description: (ref4 = schema.description) != null ? ref4.tag : void 0,
+            description: (ref9 = schema.description) != null ? ref9.tag : void 0,
             summary: "View detail on " + schema.tag,
             deprecated: deprecated,
             response: [
@@ -273,6 +305,14 @@
             method: 'put',
             summary: "Update details on " + schema.tag,
             deprecated: deprecated,
+            parameter: [
+              {
+                name: "" + schema.tag,
+                "in": 'body',
+                description: (ref10 = schema.description) != null ? ref10.tag : void 0,
+                schema: yang2jschema(schema, item)
+              }
+            ],
             response: [
               {
                 code: 200,
@@ -284,6 +324,14 @@
             method: 'patch',
             summary: "Merge details on " + schema.tag,
             deprecated: deprecated,
+            parameter: [
+              {
+                name: "" + schema.tag,
+                "in": 'body',
+                description: (ref11 = schema.description) != null ? ref11.tag : void 0,
+                schema: yang2jschema(schema, item)
+              }
+            ],
             response: [
               {
                 code: 200,
@@ -306,10 +354,10 @@
     }
   };
 
-  discoverParameters = function(schema) {
+  discoverPathParameters = function(schema) {
     var k, key, param, ref1, ref2, v;
     if (typeof debug === "function") {
-      debug("[" + schema.trail + "] discovering parameters");
+      debug("[" + schema.trail + "] discovering path parameters");
     }
     key = "" + ((ref1 = schema.key) != null ? ref1.valueOf() : void 0);
     switch (false) {
@@ -379,7 +427,7 @@
     switch (schema.kind) {
       case 'list':
         key = (ref3 = (ref4 = schema.key) != null ? ref4.valueOf() : void 0) != null ? ref3 : 'index';
-        params = discoverParameters(schema);
+        params = discoverPathParameters(schema);
         paths.push({
           name: name + "/{" + key + "}",
           parameter: params,
@@ -496,10 +544,15 @@
           operation = path[op.method] = {};
           for (k in op) {
             v = op[k];
-            if (k !== 'method' && k !== 'response') {
+            if (k !== 'method' && k !== 'parameter' && k !== 'response') {
               operation[k] = v;
             }
           }
+          operation.parameters = traverse(op.parameter).map(function(x) {
+            if (this.key === 'schema') {
+              return this.update(serializeJSchema(x), true);
+            }
+          });
           operation.responses = op.response.reduce((function(x, _res) {
             x[_res.code] = {
               description: _res.description,
@@ -522,14 +575,16 @@
           return this.remove();
         }
       });
-      return this.output = (function() {
-        switch (this.input.format) {
-          case 'json':
-            return JSON.stringify(spec, null, 2);
-          case 'yaml':
-            return yaml.dump(spec);
-        }
-      }).call(this);
+      return this.output = {
+        data: (function() {
+          switch (this.input.format) {
+            case 'json':
+              return JSON.stringify(spec, null, 2);
+            case 'yaml':
+              return yaml.dump(spec);
+          }
+        }).call(this)
+      };
     }
   });
 
